--- a/mobile/src/main/res/layout-land/activity_main.xml
+++ b/mobile/src/main/res/layout-land/activity_main.xml
@@ -27,6 +27,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center|top"
         android:layout_margin="16dp"
         android:elevation="@dimen/cardview_default_elevation"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -36,6 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:maxLines="1"
             android:textSize="16sp"/>
 
         <com.facebook.login.widget.ProfilePictureView
@@ -48,9 +50,9 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="center|bottom"
         android:layout_margin="16dp"
         android:elevation="@dimen/cardview_default_elevation">
 
